Vue2+ParcelからVue3+Viteに変更

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <section id="app">
         </section>
-        <script src="main.ts"></script>
+        <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
