--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="author" content="Mutsuki Kimuraya" />
-        <title>シンデレラガールズアイドル一覧</title>
-    </head>
-    <body>
-        <section id="app">
-        </section>
-        <script type="module" src="/src/main.ts"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Mutsuki Kimuraya" />
+    <title>シンデレラガールズアイドル一覧</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
