--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Mutsuki Kimuraya" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>シンデレラガールズアイドル一覧</title>
   </head>
   <body>
